Report Issue connected to backend
